along with this program. If not, see <http://www.gnu.org/licenses/>.

CHANGELOG
=========
v12.0.00
--------
	Headlines
		...
	
	Changes With Important Notices
		...
	
	Significant Changes
		...
	
	Security
		...
	
	Tweaks & Bug Fixes
		System: Added Danish as a development language
		System: improved MIME type checking on CSV import
		System: fixed Google login PHP warning
		System: fixed login PHP warning
		System Admin: Improved version comparison in module updater
		System Admin: Improved version comparison in non-login database updater
		Activities: fixed error in adding and editing activities when payment is turned off
		Behaviour: made column widths consistent when viewing behaviour log
		Formal Assessment: fixed issue with View Classes menu not appearing for a user with no classes (e.g. admin)
		Formal Assessment: fixed uploaded response file selector gigantism issue
		Markbook: fixed issue causing mis-evaluation of personalised targets, for some edge cases
		Markbook: fixed uploaded response file selector gigantism issue
		Students: added year group to New Students report when using Date Range setting 
		Students: added All Students filter persistence to Back To Search link on student details page
		User Admin: added notification to form tutor(s) when a student's privacy options change (via Edit or Data Update).		
		User Admin: made max_input_vars test a little more generous
		
		
v11.0.00
--------
	Headlines
		New Tracking modules adds longitudinal graphing and data exports of student assessment data
		New Formal Assessment module facilitates teacher-inputted, school-wide Internal Assessments, and incorporates old External Assessment module
		New custom fields feature allows easy creation of new user fields for use in User Admin, Application Form, Data Updater and Students modules
		Improved user import functionality allows operation in both sync and import modes
		Additional parent interfaces give access to Behaviour and Finance information