@@ -33,7 +33,7 @@ v12.0.00
 	Tweaks & Bug Fixes
 		System: Added Danish as a development language
 		System: improved MIME type checking on CSV import
-		System: fixed Google login PHP warning
+		System: fixed Google login PHP warnings
 		System: fixed login PHP warning
 		System Admin: Improved version comparison in module updater
 		System Admin: Improved version comparison in non-login database updater
@@ -41,6 +41,7 @@ v12.0.00
 		Behaviour: made column widths consistent when viewing behaviour log
 		Formal Assessment: fixed issue with View Classes menu not appearing for a user with no classes (e.g. admin)
 		Formal Assessment: fixed uploaded response file selector gigantism issue
+		Library: added item count column to lending log
 		Markbook: fixed issue causing mis-evaluation of personalised targets, for some edge cases
 		Markbook: fixed uploaded response file selector gigantism issue
 		Students: added year group to New Students report when using Date Range setting 
